--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@ header h1 {
     font-weight: bolder;
 }
 header{
-    color: #000000;
+    color: #f58220;
     background-color: hsl(168, 76%, 42%);
     background-image: url(headernatu.jpg);
     background-repeat: no-repeat;
